# snake-pong

./: README.md  __main__.py  pyproject.toml
src/: field.py  menu.py  paddle.py  snake.py
