[tool.poetry]
name = "snake-pong"
version = "0.0.0"
description = "It's Pong, but also Snake. It's weird, yeah..."
authors = ["Luna Ilune Makyus <ojackson287@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
